# vector-vault

./: .gitignore  Dockerfile  README.md  build_exe.ps1  docker-compose.yml  prefetch_models.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: release.yml
app/: cli.py  config.py  ingest.py  llm.py  main.py  rerank.py  start.py  store.py
evals/: eval_rag.py  samples.jsonl
frontend/: index.html  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: SearchPanel.jsx  UploadPanel.jsx
sample_docs/: acid.txt
